sorta fixes #1, adds #2, adds many other enhancements

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,7 +7,7 @@ description: An attempted recreation of Mineplex's OITQ game.
 website: www.okawaffles.com
 commands:
   start:
-    usage: /start
+    usage: /start <mapName>
     permission: oitq.start
   endgame:
     usage: /endgame
